Modernize native digest and bounded input helpers with exact boundary checks